Partial GPU mechanism printing.
Generates and links GPU mechanisms with dummy nrn implementations.

--- a/modcc/CMakeLists.txt
+++ b/modcc/CMakeLists.txt
@@ -17,7 +17,7 @@ set(MODCC_SOURCES
 
     printer/cexpr_emit.cpp
     printer/cprinter.cpp
-    #printer/cudaprinter.cpp
+    printer/cudaprinter.cpp
     printer/infoprinter.cpp
     printer/printerutil.cpp
 )
