Cuda printer with stub nrn routines. (#478)
* Hard squash simd work onto mech-refactor branch.

* fvm_size_type->fvm_index_type

Consistent integral types across back-ends and layouts.

Also:
* Rework dangerous memory::array(Iter, Iter) constructor to be less dangerous (and do the expected thing).
* Allow ranges to be constructed from other ranges if the iterators are compatible.

* Fix up cpu side tests with fvm_index_type.

* Partial GPU mechanism printing.

Generates and links GPU mechanisms with dummy nrn implementations.

* Fix some CUDA memory mishaps.

* Fix mechanism linkage

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -18,24 +18,26 @@ build_modules(
     ${mechanisms}
     SOURCE_DIR "${mod_srcdir}"
     DEST_DIR "${mech_dir}"
-#    MODCC_FLAGS -t cpu -t gpu ${modcc_simd}
-#    GENERATES .hpp _cpu.cpp _gpu.cpp _gpu.cu
-    MODCC_FLAGS -t cpu ${modcc_simd}
-    GENERATES .hpp _cpu.cpp
+    MODCC_FLAGS -t cpu -t gpu ${modcc_simd}
+    GENERATES .hpp _cpu.cpp _gpu.cpp _gpu.cu
     TARGET build_all_mods
 )
 
 # Generate source for default mechanism catalogue
 
 set(catsrc ${CMAKE_CURRENT_BINARY_DIR}/default_catalogue.cpp)
-set(default_catalogue_options -I ${mech_dir} -B multicore -o ${catsrc})
+set(default_catalogue_options -I ${mech_dir} -o ${catsrc} -B multicore)
+if(ARB_WITH_CUDA)
+    list(APPEND default_catalogue_options -B gpu)
+endif()
+
 add_custom_command(
     OUTPUT ${catsrc}
     COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate_default_catalogue ${default_catalogue_options} ${mechanisms}
     DEPENDS build_all_mods generate_default_catalogue
 )
 
-# Make a library with the implementations of the mechanism kernels
+# Make libraries with the implementations of the mechanism kernels.
 
 foreach(mech ${mechanisms})
     list(APPEND cpu_mech_sources ${mech_dir}/${mech}_cpu.cpp)
@@ -43,32 +45,31 @@ endforeach()
 
 add_library(arbormech ${cpu_mech_sources} ${catsrc})
 target_compile_options(arbormech PRIVATE ${CXXOPT_ARCH})
+set(mech_libs arbormech)
 
 if (ARB_AUTO_RUN_MODCC_ON_CHANGES)
     add_dependencies(arbormech build_all_mods)
 endif()
 
-# Until we merge our myriad static libraries, we prepend mech libs, and also append CPU mech lib
-# which holds the generated default catalogue code.
-
-list(INSERT ARB_LIBRARIES 0 arbormech)
-list(APPEND ARB_LIBRARIES arbormech)
-
 if(ARB_WITH_CUDA)
-#    # make list of the .cu files that implement the mechanism kernels
-#    foreach(mech ${mechanisms})
-#        list(APPEND cuda_mech_sources ${mech_dir}/${mech}_gpu_impl.cu)
-#    endforeach()
-#
-#    # compile the .cu files into a library
-#    cuda_add_library(arbormechcu ${cuda_mech_sources})
-#
-#    # force recompilation on changes to modcc or the underlying .mod files
-#    if (ARB_AUTO_RUN_MODCC_ON_CHANGES)
-#        add_dependencies(arbormechcu build_all_gpu_mods)
-#    endif()
-#
-#    list(INSERT ARB_LIBRARIES 0 arbormechcu)
+    foreach(mech ${mechanisms})
+        list(APPEND cuda_mech_sources "${mech_dir}/${mech}_gpu.cpp" "${mech_dir}/${mech}_gpu.cu")
+    endforeach()
+
+    cuda_add_library(arbormechcu ${cuda_mech_sources})
+    set(mech_libs arbormech arbormechcu)
+
+    # force recompilation on changes to modcc or the underlying .mod files
+    if (ARB_AUTO_RUN_MODCC_ON_CHANGES)
+        add_dependencies(arbormechcu build_all_mods)
+    endif()
+
 endif()
+
+# Until we merge our myriad static libraries, we prepend mech libs and also append mech libs
+# to capture generated default catalogue code interdependencies with arbor lib.
+
+list(INSERT ARB_LIBRARIES 0 ${mech_libs})
+list(APPEND ARB_LIBRARIES ${mech_libs})
 
 set(ARB_LIBRARIES "${ARB_LIBRARIES}" PARENT_SCOPE)
