reman serial_context -> local_context

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -76,7 +76,7 @@ set(test_sources
     test_segment.cpp
     test_schedule.cpp
     test_rss_cell.cpp
-    test_serial_context.cpp
+    test_local_context.cpp
     test_simd.cpp
     test_span.cpp
     test_spikes.cpp
