add vector time_seq and unit tests

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -84,6 +84,7 @@ set(test_sources
     test_strprintf.cpp
     test_swcio.cpp
     test_synapses.cpp
+    test_time_seq.cpp
     test_tree.cpp
     test_transform.cpp
     test_uninitialized.cpp
