--- a/arbor/CMakeLists.txt
+++ b/arbor/CMakeLists.txt
@@ -68,8 +68,9 @@ endif()
 # Mechanisms (generated from .mod files):
 # (Sets arbor_mechanism_sources variable, build_all_mods target).
 add_subdirectory(../mechanisms "${CMAKE_BINARY_DIR}/mechanisms")
+message(STATUS "debug: arbor_mechanism_sources: ${arbor_mechanism_sources}")
 
 add_library(arbor ${arbor_sources} ${arbor_mechanism_sources})
-target_link_libraries(arbor PRIVATE ${libarbor_deps})
+target_link_libraries(arbor PRIVATE arbor_deps)
 target_include_directories(arbor PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/external)
 
